--- a/webroot/index.html
+++ b/webroot/index.html
@@ -6,7 +6,8 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-
+<div id="gear-large"><img src="images/gear-large.png" alt=""></div>
+<div id="gear-small"><img src="images/gear-small.png" alt=""></div>
 <script src="scripts/vendor.js"></script>
 <script src="scripts/main.js"></script>
 </body>
