added a few more gears and a slider to control motor speed

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -6,8 +6,12 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-<div id="gear-large"><img src="images/gear-large.png" alt=""></div>
-<div id="gear-small"><img src="images/gear-small.png" alt=""></div>
+<h3>GEAR SPEED</h3>
+<input id="gear-speed" type="range" min="-10" max="10" value="0">
+<div id="gear1" class="gear gear-large"><img src="images/gear-large.png" alt=""></div>
+<div id="gear2" class="gear gear-small"><img src="images/gear-small.png" alt=""></div>
+<div id="gear4" class="gear gear-small"><img src="images/gear-small.png" alt=""></div>
+<div id="gear3" class="gear gear-large"><img src="images/gear-large.png" alt=""></div>
 <script src="scripts/vendor.js"></script>
 <script src="scripts/main.js"></script>
 </body>
